fixes zooming on inputs on safari

--- a/styles.css
+++ b/styles.css
@@ -249,11 +249,13 @@ input,textarea {
   border-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
   box-shadow: 2px 5px 6px -5px #888888;
+  font-size: 16px;
 }
 
 input:focus,textarea:focus {
   outline: none;
   border: 2px solid #9AA9FA;
+  font-size: 16px;
 }
 
 .form-btn {
